--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "optimist": "0.6.0",
     "node-haste": "git+ssh://git@github.com/facebook/node-haste.git",
     "contextify": "0.1.6",
-    "source-map": "~0.1.22"
+    "source-map": "~0.1.22",
+    "convert-source-map": "0.2.6"
   },
   "author": {
     "name": "Lee Byron",
