--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "Connect middleware for rendering pages with React JavaScript Library.",
   "main": "src/index.js",
   "dependencies": {
-    "less": "1.4.1",
     "node-terminal": "0.1.1",
     "async": "0.2.9",
-    "browserify": "2.22.0",
     "react-tools": "0.4.0",
     "optimist": "0.6.0",
     "node-haste": "git+ssh://git@github.com/facebook/node-haste.git",
     "contextify": "0.1.6",
     "source-map": "~0.1.22",
-    "convert-source-map": "0.2.6"
+    "convert-source-map": "0.2.6",
+    "browser-builtins": "1.0.7"
   },
   "author": {
     "name": "Lee Byron",
