Use react master and all our jstransform hotness Since react-page is on master we shoud use the same version here. We should also enable all our es6 transforms by default. No need to hold back. It also makes our code more portable.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "node-terminal": "0.1.1",
     "async": "0.2.9",
-    "react-tools": "0.4.0",
+    "React": "git://github.com/facebook/react.git",
+    "jstransform": "~1.0.0",
     "optimist": "0.6.0",
     "node-haste": "git://github.com/facebook/node-haste.git",
     "contextify": "0.1.6",
