--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "node-terminal": "0.1.1",
     "async": "0.2.9",
+    "es5-shim": "~2.1.0",
     "React": "git://github.com/facebook/react.git",
     "jstransform": "~1.0.0",
     "optimist": "0.6.0",
