Update deps, don't point at git repos
We don't actually need to point at react git repo, nor node-haste. So
don't.

--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "Connect middleware for rendering pages with React JavaScript Library.",
   "main": "src/index.js",
   "dependencies": {
-    "node-terminal": "0.1.1",
     "async": "0.2.9",
-    "es5-shim": "~2.1.0",
-    "React": "git://github.com/facebook/react.git",
-    "jstransform": "10.0.1",
-    "optimist": "0.6.0",
-    "node-haste": "git://github.com/facebook/node-haste.git",
-    "source-map": "~0.1.22",
+    "browser-builtins": "1.0.7",
     "convert-source-map": "0.2.6",
-    "browser-builtins": "1.0.7"
+    "es5-shim": "^4.1.0",
+    "node-haste": "^1.2.8",
+    "node-terminal": "0.1.1",
+    "optimist": "0.6.0",
+    "react-tools": "^0.13.0",
+    "source-map": "~0.1.22"
   },
   "author": {
     "name": "Lee Byron",
@@ -21,8 +20,8 @@
     "url": "http://github.com/leebyron"
   },
   "license": "Apache-2.0",
-  "repository" : {
-    "type" : "git",
-    "url" : "http://github.com/facebook/react-page-middleware.git"
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/reactjs/react-page-middleware.git"
   }
 }
