--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "react-page-middleware",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Connect middleware for rendering pages with React JavaScript Library.",
   "main": "src/index.js",
   "dependencies": {
     "async": "0.2.9",
     "browser-builtins": "1.0.7",
+    "chalk": "^1.1.1",
     "convert-source-map": "0.2.6",
     "es5-shim": "^4.1.0",
     "node-haste": "^1.2.8",
-    "node-terminal": "0.1.1",
     "optimist": "0.6.0",
     "react-tools": "^0.13.0",
     "source-map": "~0.1.22"
